No way to increase falloff size in proportional edit mode on laptops #48372

Closed
opened 2016-05-07 21:43:54 +02:00 by Robert Tolppi · 19 comments

System Information
MacBook Pro (Retina, 13-inch, Early 2015)
OS X Version 10.11.4

Blender Version
2.77a

Short description of error
When proportionally editing using trackpad, there is no way to increase the size of the falloff
Exact steps for others to reproduce the error

  1. Go into edit mode on a sphere
  2. Hit o on the keyboard to enable proportional editing.
  3. Attempt to change falloff size using scroll.

It seems like trackpad interaction is a HUGE problem for blender (I have run into all sorts of very similar "bugs" which are more like prodigious developer oversights). The trackpad should get its own project status!!!!! Not being able to use critical scroll based features of blender on my brand new laptop is very disappointing. I shouldn't have to carry around a clunky mouse when I have a super sexy force touch, multitouch trackpad built in with pressure sensitivity (please take advantage of it) and haptic feedback. I can only imagine how bad it must be for artists that use a wacom tablet when blender can't even handle a run of the mill trackpad, let alone an Apple engineered one.

**System Information** MacBook Pro (Retina, 13-inch, Early 2015) OS X Version 10.11.4 **Blender Version** 2.77a **Short description of error** When proportionally editing using trackpad, there is no way to increase the size of the falloff **Exact steps for others to reproduce the error** 1. Go into edit mode on a sphere 2. Hit o on the keyboard to enable proportional editing. 3. Attempt to change falloff size using scroll. It seems like trackpad interaction is a HUGE problem for blender (I have run into all sorts of very similar "bugs" which are more like prodigious developer oversights). The trackpad should get its own project status!!!!! Not being able to use critical scroll based features of blender on my brand new laptop is very disappointing. I shouldn't have to carry around a clunky mouse when I have a super sexy force touch, multitouch trackpad built in with pressure sensitivity (please take advantage of it) and haptic feedback. I can only imagine how bad it must be for artists that use a wacom tablet when blender can't even handle a run of the mill trackpad, let alone an Apple engineered one.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RobertTolppi

Added subscriber: @RobertTolppi

#48359 was marked as duplicate of this issue

#48359 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Usual multi-touch trackpad is working perfectly OK here under linux… So blender totally does support trackpad 'wheeling' events, now if OSX cannot generate a proper standard wheeling event out of its “super sexy force touch, multitouch trackpad built in with pressure sensitivity and haptic feedback“…

Anyway, we need some dev with that diamond hardware to test and investigate, likely yet another new thing we'll have to add to our OSX GHOST interface.

Usual multi-touch trackpad is working perfectly OK here under linux… So blender totally does support trackpad 'wheeling' events, now if OSX cannot generate a proper standard wheeling event out of its “super sexy force touch, multitouch trackpad built in with pressure sensitivity and haptic feedback“… Anyway, we need some dev with that diamond hardware to test and investigate, likely yet another new thing we'll have to add to our OSX GHOST interface.

Added subscriber: @brecht

Added subscriber: @brecht

Works fine for me, also MacBook Pro (Retina, 13-inch, Early 2015). Using two fingers to swipe up / down increases / decreases proportional edit size.

Please check if you have any non-default OS X trackpad configuration and try with File > Load Factory Settings in Blender.

Works fine for me, also MacBook Pro (Retina, 13-inch, Early 2015). Using two fingers to swipe up / down increases / decreases proportional edit size. Please check if you have any non-default OS X trackpad configuration and try with File > Load Factory Settings in Blender.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note: Alt +/- chances proportional size too.

Note: Alt +/- chances proportional size too.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Page up/down too.

Page up/down too.
Author

Ok guys, It does work with scroll IF you use the g key and z to restrict the access, its just that there is no way to do it if you use the manipulation handles but I think just reviewing anything that uses trackpad scroll on OS X would be wise.

Ok guys, It does work with scroll IF you use the g key and z to restrict the access, its just that there is no way to do it if you use the manipulation handles but I think just reviewing anything that uses trackpad scroll on OS X would be wise.
Author

It would be also great if they could use 3 fingers to pan and 2 to orbit. The shift key is also inelegant.

It would be also great if they could use 3 fingers to pan and 2 to orbit. The shift key is also inelegant.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2016-05-08 18:42:18 +02:00

This issue was referenced by 5fde5616e0

This issue was referenced by 5fde5616e0affd7bfedabe40614f6d9746dce7cb

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

It works with both G key and manipulator handles here, and with or without restricting to one axis.

Anyway, I've fixed loop cut and bevel to support increasing the number of segments with the trackpad. Certainly it's possible to take advantage of the trackpad in more areas and improve it, but that's a feature request outside the scope of this bug tracker.

It works with both G key and manipulator handles here, and with or without restricting to one axis. Anyway, I've fixed loop cut and bevel to support increasing the number of segments with the trackpad. Certainly it's possible to take advantage of the trackpad in more areas and improve it, but that's a feature request outside the scope of this bug tracker.
Author

How would you get someone to make a little patch or commit or whatever to get the 3 finger pan working. It's a feature "a feature request outside the scope of this bug tracker" but it's one that is very important to core functionality.

How would you get someone to make a little patch or commit or whatever to get the 3 finger pan working. It's a feature "a feature request outside the scope of this bug tracker" but it's one that is very important to core functionality.

For feature requests see [here ]] and [ https:*rightclickselect.com/p/ | here . There's thousands of different features that are very important to someone.

For feature requests see [here ]] and [[ https:*rightclickselect.com/p/ | here ](https:*wiki.blender.org/index.php/Dev:Doc/Contact#Requesting_Features). There's thousands of different features that are very important to someone.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48372
No description provided.