Fix T48372: missing OS X trackpad scroll support for increasing loop cut / bevel segments.